Add custom font for public homepage

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -17,6 +17,10 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
 </head>
 
+<style>
+    @import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
+</style>
+
 <body>
     <div class="container-fluid round-font-style">
         <div class="row flex-nowrap">
