--- a/app/templates/quizzes.html
+++ b/app/templates/quizzes.html
@@ -16,9 +16,8 @@
             <h3>{{ quiz.topic }}</h3>
         </div>
         <div class="card-body">
-            <a href="{% url 'quiz_record' quiz.id %}" class="btn btn-outline-success"><svg
-                    xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                    class="bi bi-play-fill" viewBox="0 0 16 16">
+            <a href="{% url 'quiz' quiz.id %}" class="btn btn-outline-success"><svg xmlns="http://www.w3.org/2000/svg"
+                    width="16" height="16" fill="currentColor" class="bi bi-play-fill" viewBox="0 0 16 16">
                     <path
                         d="m11.596 8.697-6.363 3.692c-.54.313-1.233-.066-1.233-.697V4.308c0-.63.692-1.01 1.233-.696l6.363 3.692a.802.802 0 0 1 0 1.393" />
                 </svg> Play</a>
