--- a/app/templates/template_activate_account.html
+++ b/app/templates/template_activate_account.html
@@ -1,5 +1,5 @@
 {% autoescape off %}
-Hi {{ user.nickname }},
+Hello {{ user.nickname }}!
 
 Please click on the link below to confirm your registration:
 
