--- a/app/templates/template_activate_account.html
+++ b/app/templates/template_activate_account.html
@@ -1,4 +1,6 @@
 {% autoescape off %}
+<h2><b>Activate your Knowmona account</b></h2>
+
 Hello {{ user.nickname }}!
 
 Please click on the link below to confirm your registration:
