--- a/app/templates/app.html
+++ b/app/templates/app.html
@@ -178,14 +178,11 @@
                 Create
             </button>
 
-            <form action="" method="POST" enctype="multipart/form-data" class="mt-4">
-                {% csrf_token %}
-                <div class="mb-3">
-                    <label for="files" class="form-label">Select files</label>
-                    <input type="file" class="form-control" id="files" name="files" multiple>
-                </div>
-                <button type="submit" class="btn btn-primary">Upload</button>
-            </form>
+
+            <div class="mb-3">
+                <label for="files" class="form-label">Upload files (optional)/label>
+                <input type="file" class="form-control" id="files" name="files" multiple>
+            </div>
 
             <div class="choice-groups">
                 <!-- Difficulty Section -->
