--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -41,7 +41,7 @@
 			</div>
 
 			<div class="g_id_signin" data-type="standard" data-shape="pill" data-theme="filled_black"
-				data-text="continue_with" data-size="large" data-logo_alignment="center" data-width="400">
+				data-text="signup_with" data-size="large" data-logo_alignment="center" data-width="400">
 			</div>
 
 			<button id="custom-google-btn" class="btn rounded-pill btn-outline-success" style="color: white;"><svg
