--- a/app/templates/quiz.html
+++ b/app/templates/quiz.html
@@ -10,6 +10,7 @@
     <title>Knowmona</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="shortcut icon" type="image/png" href="{% static '/media/favicon.ico' %}" />
 </head>
 
 <style>
@@ -137,7 +138,7 @@
 <body>
     <div class="container-fluid round-font-style">
         <div class="row flex-nowrap">
-                <div class="col-md-6 offset-md-3 py-3 my-3">
+                <div class="col-md-6 offset-md-3 py-3 my-3" style="margin-right: -5rem;">
                     {% if user.is_authenticated %}  
                     <div class="quiz-header">
                         <div class="card-header">
