--- a/app/templates/quiz.html
+++ b/app/templates/quiz.html
@@ -138,7 +138,7 @@
 <body>
     <div class="container-fluid round-font-style">
         <div class="row flex-nowrap">
-                <div class="col-md-6 py-3 my-3" style="margin-right: -5rem;">
+                <div class="col-md-6 py-3 my-3" style="margin-left: 20rem; margin-right: -5rem;">
                     {% if user.is_authenticated %}  
                     <div class="quiz-header">
                         <div class="card-header">
