Update profile template

--- a/app/templates/app.html
+++ b/app/templates/app.html
@@ -170,7 +170,7 @@
 
             <div class="mb-5">
                 <label for="files" class="form-label text-muted">Upload files (optional):</label>
-                <input type="file" class="form-control" id="files" name="files" multiple>
+                <input type="file" class="form-control rounded-pill text-muted" id="files" name="files" multiple>
                 <small class="text-muted">Supported file formats: .pdf, .docx, .txt</small>
             </div>
         
