Update homepage image to gif

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -52,7 +52,7 @@
                 <br>
                 <div class="container">
                     <div class="row">
-                        <div class="col"><img src="{% static 'media/homephoto.png' %}" alt="Homepage image"
+                        <div class="col"><img src="{% static 'media/homephoto.gif' %}" alt="Homepage image"
                                 style="width: 650px; height: 520px;">
                         </div>
 
