--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -52,9 +52,13 @@
                 <br>
                 <div class="container">
                     <div class="row">
-                        <div class="col"><img src="{% static 'media/homephoto.gif' %}" alt="Homepage image"
-                                style="width: 650px; height: 520px;">
+                        <div class="col">
+                                <video autoplay loop muted height="520" width="650">
+                                    <source src="{% static 'media/homeart.mp4' %}" type="video/mp4">
+                                    Your browser does not support the video tag.
+                                </video>
                         </div>
+                        
 
                         <div class="col text-center">
                             <h1 style="text-align: center; margin-top: 60px;">Have fun and learn from testing your
