--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -52,11 +52,8 @@
                 <br>
                 <div class="container">
                     <div class="row">
-                        <div class="col">
-                                <video autoplay loop muted height="520" width="650">
-                                    <source src="{% static 'media/homeart.mp4' %}" type="video/mp4">
-                                    Your browser does not support the video tag.
-                                </video>
+                        <div class="col"><img src="{% static 'media/homephoto.gif' %}" alt="Homepage image"
+                                style="width: 650px; height: 520px;">
                         </div>
                         
 
