Update multiple templates

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -58,13 +58,10 @@
                         revival.
                     </p>
                     <br>
-                    <h4 style="color: gray">About the Developer</h4>
-                    <p>
-                        It is maintained and developed by Grantley Cullar, a senior high school student residing in the Philippines.
-                    </p>
+                    <p>Developed and maintained by Grantley Cullar</p>
                 </div>
                 <br>
-                <hr style="margin-top: 20rem;">
+                <hr style="margin-top: 22rem;">
                 <div style="text-align: center; margin-top: 20px;">
                     <small><a style="color: rgb(139, 139, 139); text-decoration: none;"
                             href="http://dev.knowmona.com">Grantley Cullar 2024</a></small>
