--- a/app/templates/auth_base.html
+++ b/app/templates/auth_base.html
@@ -10,7 +10,7 @@
     <title>Knowmona | AI-Powered Learning Game</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="shortcut icon" type="image/png" href="{% static '/media/favicon.ico' %}"/>
+    <link rel="shortcut icon" type="image/png" href="{% static '/media/favicon.ico' %}" />
     <script src="https://accounts.google.com/gsi/client" async></script>
 </head>
 
@@ -50,7 +50,9 @@
                 </div>
                 {% endfor %}
                 {% endif %}
-                <h2 style="color:rgb(2, 202, 202); font-weight: 550; text-align: center;">knowmona</h2>
+                <a href="href={% url 'home' %}" style="text-decoration: none;">
+                    <h2 style="color:rgb(2, 202, 202); font-weight: 550; text-align: center;">knowmona</h2>
+                </a>
                 <br>
                 <div class="col-md-4 offset-md-4 py-4">
                     {% block content %}
