--- a/app/templates/bites.html
+++ b/app/templates/bites.html
@@ -6,7 +6,7 @@
 
 <div class="col-md-6 offset-md-3">
 
-    <h4>Bites is coming soon!</h4>
+    <h4 class="mt-5">🍪 Bites, quick interactive learning materials, are coming soon!</h4>
 
 </div>
 
