Integrate celery redis for asynchronous work in quiz inference

--- a/app/templates/auth_base.html
+++ b/app/templates/auth_base.html
@@ -50,7 +50,7 @@
                 </div>
                 {% endfor %}
                 {% endif %}
-                <a href="href={% url 'home' %}" style="text-decoration: none;">
+                <a href="{% url 'home' %}" style="text-decoration: none;">
                     <h2 style="color:rgb(2, 202, 202); font-weight: 550; text-align: center;">knowmona</h2>
                 </a>
                 <br>
