--- a/app/templates/quiz_status.html
+++ b/app/templates/quiz_status.html
@@ -54,7 +54,7 @@ document.addEventListener('DOMContentLoaded', function() {
     width: 50px;
     height: 50px;
     border: 5px solid #f3f3f3;
-    border-top: 5px solid #3498db;
+    border-top: 5px solid rgb(2, 202, 202);
     border-radius: 50%;
     animation: spin 1s linear infinite;
     margin: 0 auto;
