--- a/app/templates/quiz.html
+++ b/app/templates/quiz.html
@@ -170,8 +170,8 @@
 
                         <div id="questions-wrapper">
                             {% for question in questions %}
-                            <div class="question-container" id="question-{{ forloop.counter }}" {% if not forloop.first
-                                %}style="transform: translateX(100%); opacity: 0;" {% endif %}>
+                            <div class="question-container" id="question-{{ forloop.counter }}" 
+                                    {% if not forloop.first %}style="transform: translateX(100%); opacity: 0;"{% endif %}>
 
                                 <div class="question-text mb-4">
                                     <h4>{{ question.text }}</h4>
